# IDS-STORAGE

./: LICENSE  README.md
IDS-RS/: README.md  config.toml
IDS-RS-1-menu-tester/IDS-RS/: README.md
IDS-RS-1-menu-tester/IDS-RS/src/: alerter.rs
IDS-RS-10-FooterMail/IDS-RS/src/: alerter.rs  config.rs  main.rs
IDS-RS-11-BetterMail/IDS-RS/: README.md  config.toml
IDS-RS-11-BetterMail/IDS-RS/src/: alerter.rs
IDS-RS-11-BetterMail/IDS-RS/tester/: tester.py
IDS-RS-11-BetterMailV2/IDS-RS/src/: alerter.rs  display.rs
IDS-RS-12-AcceptScan/IDS-RS/: config.toml
IDS-RS-12-AcceptScan/IDS-RS/src/: alerter.rs  detector.rs  display.rs  main.rs
IDS-RS-13-CleanCode/IDS-RS/: Cargo.toml  README.md
IDS-RS-13-CleanCode/IDS-RS/src/: detector.rs  display.rs
IDS-RS-13-CleanCode/IDS-RS/src/parser/: cef.rs  gaia.rs
IDS-RS-14-PrezentareFINALA/IDS-RS/: README.md
IDS-RS-14-PrezentareFINALA/IDS-RS/src/: config.rs  main.rs
IDS-RS-14-PrezentareFINALA/IDS-RS/tester/: tester.py
IDS-RS-14-PrezentareFINALA/IDS-RS/utils/: PREZENTARE_PROIECT_IDS-RS.md  md_to_pdf.py  md_to_pdf_win.py
IDS-RS-16-lessOrEqual/IDS-RS/: LEARNING_RUST.md  NOTES.md  README.md  config.toml
IDS-RS-16-lessOrEqual/IDS-RS/src/: alerter.rs  config.rs  detector.rs  display.rs
IDS-RS-17-WhiteListing/IDS-RS/: README.md  config.toml
IDS-RS-17-WhiteListing/IDS-RS/src/: config.rs  detector.rs  display.rs
IDS-RS-18-Hostname/IDS-RS/: plan_PROIECTE.md
IDS-RS-18-Hostname/IDS-RS/src/: alerter.rs  config.rs  display.rs  main.rs
IDS-RS-19-HotReload/IDS-RS/: Cargo.toml  README.md  config.toml.bak
IDS-RS-19-HotReload/IDS-RS/src/: alerter.rs  detector.rs  display.rs  main.rs
IDS-RS-19-HotReload/IDS-RS/tester/: tester.py
IDS-RS-19-HotReload/IDS-RS/utils/: PREZENTARE_PROIECT_IDS-RS.docx  PREZENTARE_PROIECT_IDS-RS.md
IDS-RS-2-new-SIEM-ALERT/IDS-RS/: README.md
IDS-RS-2-new-SIEM-ALERT/IDS-RS/src/: alerter.rs  (+3 more)
IDS-RS-22-DistributedScan/IDS-RS/: README.md  config.toml
IDS-RS-3-siemHARD%7CCleanUP/IDS-RS/: README.md
IDS-RS-4-validare-config/IDS-RS/: README.md
IDS-RS-5-MessagePort/IDS-RS/: LEARNING_RUST.md  config.toml
IDS-RS-8-SanitizeCEF/IDS-RS/: README.md  config.toml
IDS-RS-9-UdpRateLimit/IDS-RS/: config.toml
IDS-RS-LEARNCLD/IDS-RS/: LEARNING_RUST.md  plan_PROIECTE.md
IDS-RS-LEARNING/IDS-RS/: CLAUDE.md  README.md
IDS-RS/src/: alerter.rs  config.rs  display.rs  main.rs
IDS-RS/tester/: tester.py
Prezentare/: PREZENTARE_PROIECT_IDS-RS.md  md_to_pdf.py
(+37 files in other folders)
